--- a/contents/pub.tex
+++ b/contents/pub.tex
@@ -2,8 +2,7 @@
 
 \subsubsection{Long Talk}
 
-Trung Duc Nguyen, Diep Thi-Ngoc Nguyen, Yasushi Kiyoki.A Regional Food's Features Extraction Algorithm and Its Application.
-Workshop on Cooking and Eating Activities in conjunction with ACM Conference on Multimedia. Oct 21, Barcelona, Spain.
+Trung Duc Nguyen, Diep Thi-Ngoc Nguyen, Yasushi Kiyoki. A Regional Food's Features Extraction Algorithm and Its Application. In proceeding of Workshop on Cooking and Eating Activities in conjunction with ACM Conference on Multimedia. Oct 21, Barcelona, Spain.~\cite{Nguyen:2013:RFF:2506023.2506027}
 
 \subsubsection{Poster}
 SFC OPEN RESEARCH FORUM 2014.
