--- a/contents/related.tex
+++ b/contents/related.tex
@@ -1,19 +1,16 @@
 \chapter{Related Work}\label{chap:related}
 
+
 \clearpage
 
-\section{Near communication}\label{sec:related_near}
+\section{Recommending Recipe by Ingredients}\label{sec:related_near}
 
 
-\section{WSN deploying methods}\label{sec:related_setting}
 
-\subsection{Pre-Install new sensor nodes}
+~\cite{Kuo:2012:IMP:2390776.2390778}
 
-In this method, WSN identification and other information are deployed to new sensor nodes. After that, a predefined identifier is used to decide on the communication of new sensor nodes to an exiting WSN. Only sensor node with same WSN information will be a member of the same WSN. 
 
-Luster \cite{Selavo:2007:LWS:1322263.1322274} is an example of this method. Inspire of the problem of this method is about configuring process, this method requires to have certain skills, need to do with a computer with limited mobility. Besides, it is also difficult to reconfigure it again for use in a different WSN. Thus, this method cannot meet our research's requirements.
+\section{}\label{sec:related_setting}
 
-\subsection{Exchanging static information}
 
 \section{Summary}
-To meet the requirements of deploying a WSN with low cost, we have some researches about near communication with common hardwares such as \cite{Mayrhofer:2007:SWB:1758156.1758168} and  \cite{vibconnect} with accelerometer. There are some methods for deploying a WSN become simpler and faster: Pre-Install new sensor nodes (Luster \cite{Selavo:2007:LWS:1322263.1322274}), Exchanging static information (Snap \cite{Duquennoy:2011:DSR:2070942.2071012}, Some assembly required  \cite{someassemblyrequired}), Exchanging dynamic information (Reliable set-up of medical body-sensor networks \cite{bodysensor}, \cite{Beigl:2006:UEU:1127777.1127832}). However some researches cannot make a secured WSN \cite{Duquennoy:2011:DSR:2070942.2071012}\cite{someassemblyrequired}\cite{Beigl:2006:UEU:1127777.1127832},  \cite{bodysensor} need some special hardwares and others \cite{Selavo:2007:LWS:1322263.1322274} do not provide regular users with a friendly interaction. Finally they do not meet all of the requirements in our research.% easier, faster and with lower cost.
