--- a/sigproc.bib
+++ b/sigproc.bib
@@ -1,3 +1,22 @@
+@inproceedings{Kuo:2012:IMP:2390776.2390778,
+ author = {Kuo, Fang-Fei and Li, Cheng-Te and Shan, Man-Kwan and Lee, Suh-Yin},
+ title = {Intelligent Menu Planning: Recommending Set of Recipes by Ingredients},
+ booktitle = {Proceedings of the ACM Multimedia 2012 Workshop on Multimedia for Cooking and Eating Activities},
+ series = {CEA '12},
+ year = {2012},
+ isbn = {978-1-4503-1592-0},
+ location = {Nara, Japan},
+ pages = {1--6},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2390776.2390778},
+ doi = {10.1145/2390776.2390778},
+ acmid = {2390778},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {cooking, ingredient, menu planning, minimum steiner tree, recipe recommendation},
+} 
+
+
 @INPROCEEDINGS{morioka:camera-projecter,
 	AUTHOR = "Shunsuke Morioka and Hirotada Ueda",
 	TITLE = "Cooking Support System Utilizing Built-in Cameras and Projectors",
@@ -75,3 +94,36 @@
   	howpublished = "\url{http://en.wikipedia.org/wiki/Euclidean\_distance}",
 }
 
+@MISC{wiki-tf-idf,
+	title = {TF-IDF},
+	author = "Wiki",
+  	howpublished = "\url{http://en.wikipedia.org/wiki/Tf%E2%80%93idf}",
+}
+
+@inproceedings{Nguyen:2013:RFF:2506023.2506027,
+ author = {Nguyen, Trung Duc and Nguyen, Diep Thi-Ngoc and Kiyoki, Yasushi},
+ title = {A Regional Food's Features Extraction Algorithm and Its Application},
+ booktitle = {Proceedings of the 5th International Workshop on Multimedia for Cooking \&\#38; Eating Activities},
+ series = {CEA '13},
+ year = {2013},
+ isbn = {978-1-4503-2392-5},
+ location = {Barcelona, Spain},
+ pages = {15--20},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2506023.2506027},
+ doi = {10.1145/2506023.2506027},
+ acmid = {2506027},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {dynamic recipe, food's features, recipe retrieval, text mining, web crawler},
+} 
+
+
+@ARTICLE{Jones72astatistical,
+    author = {Karen Spärck Jones},
+    title = {A statistical interpretation of term specificity and its application in retrieval},
+    journal = {Journal of Documentation},
+    year = {1972},
+    volume = {28},
+    pages = {11--21}
+}
