--- a/contents/application.tex
+++ b/contents/application.tex
@@ -127,5 +127,26 @@ and the following relations between these entities:
 
 \end{itemize}
 
+
+\begin{figure}
+\centering
+\includegraphics[scale=1]{ER.eps}
+\caption{Entity Relation Diagram}
+\label{fig:ER}
+
+\end{figure}
+
+The entities relations diagram of the system is shown in Fig.~\ref{fig:ER}
+
 \subsection{Database Scheme}
+
+Fig.~\ref{fig:scheme} shows the scheme for the system's database based on proposed entities relation diagram.
+
+\begin{figure}
+\centering
+\includegraphics[scale=1,bb=30 30 30 30]{scheme.png}
+\caption{Scheme for the System's Database}
+\label{fig:scheme}
+
+\end{figure}
 
