--- a/sigproc.bib
+++ b/sigproc.bib
@@ -1,3 +1,75 @@
+@inproceedings{Teng:2012:RRU:2380718.2380757,
+ author = {Teng, Chun-Yuen and Lin, Yu-Ru and Adamic, Lada A.},
+ title = {Recipe Recommendation Using Ingredient Networks},
+ booktitle = {Proceedings of the 3rd Annual ACM Web Science Conference},
+ series = {WebSci '12},
+ year = {2012},
+ isbn = {978-1-4503-1228-8},
+ location = {Evanston, Illinois},
+ pages = {298--307},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2380718.2380757},
+ doi = {10.1145/2380718.2380757},
+ acmid = {2380757},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {ingredient networks, recipe recommendation},
+} 
+
+
+
+@INPROCEEDINGS{5693849,
+author={Haoran Xie and Lijuan Yu and Li, Qing},
+booktitle={Multimedia (ISM), 2010 IEEE International Symposium on},
+title={A Hybrid Semantic Item Model for Recipe Search by Example},
+year={2010},
+pages={254-259},
+abstract={As a necessary part of our daily life, choose what dishes to cook that is a problem and troubles many people every day. In recent years, there has been a proliferation of multimedia recipe data on the Web 2.0 communities. To assist people to navigate and search on from large amounts of recipes, a suitable recipe model is crucial and indispensable. However, recipes have some distinct characteristics that conventional data models are inadequate to represent them for such data. For example, it is unreasonable and insufficient to measure how similar the cooking procedures of two dishes are only through text descriptions and/or their extracted terms. The main reason is that this raw data (or low-level features extracted from the raw data, e.g. term for text, color for image) do not map to the high-level semantics readily. In this paper, we argue that a recipe model should be semantic-based and behavior-oriented, preferably with domain knowledge support. A hybrid semantic item (HSI) model is next presented for addressing this problem. Based on HSI model, we devise a corresponding approach for recipe search by example. The experiment on our multimedia recipe retrieval system demonstrates that our HSI approach outperforms baseline methods.},
+keywords={Internet;content-based retrieval;feature extraction;multimedia computing;text analysis;Web 2.0 community;behavior-oriented recipe model;cooking procedure;domain knowledge support;hybrid semantic item model;multimedia recipe data;multimedia recipe retrieval system;recipe search;semantic-based recipe model;text description;data model;multimedia;recipe;retrieval},
+doi={10.1109/ISM.2010.44},}
+
+@article{Svensson:2005:DEK:1096737.1096739,
+ author = {Svensson, Martin and H\"{o}\"{o}k, Kristina and C\"{o}ster, Rickard},
+ title = {Designing and Evaluating Kalas: A Social Navigation System for Food Recipes},
+ journal = {ACM Trans. Comput.-Hum. Interact.},
+ issue_date = {September 2005},
+ volume = {12},
+ number = {3},
+ month = sep,
+ year = {2005},
+ issn = {1073-0516},
+ pages = {374--400},
+ numpages = {27},
+ url = {http://doi.acm.org/10.1145/1096737.1096739},
+ doi = {10.1145/1096737.1096739},
+ acmid = {1096739},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Social navigation, collaborative filtering, design, evaluation, experiments},
+} 
+
+
+
+@inproceedings{Svensson:2001:SNF:365024.365130,
+ author = {Svensson, Martin and H\"{o}\"{o}k, Kristina and Laaksolahti, Jarmo and Waern, Annika},
+ title = {Social Navigation of Food Recipes},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '01},
+ year = {2001},
+ isbn = {1-58113-327-8},
+ location = {Seattle, Washington, USA},
+ pages = {341--348},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/365024.365130},
+ doi = {10.1145/365024.365130},
+ acmid = {365130},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {awareness, online shopping, privacy, recommender system, social navigation},
+} 
+
+
+
 @inproceedings{Kuo:2012:IMP:2390776.2390778,
  author = {Kuo, Fang-Fei and Li, Cheng-Te and Shan, Man-Kwan and Lee, Suh-Yin},
  title = {Intelligent Menu Planning: Recommending Set of Recipes by Ingredients},
